# technion-234124

./: .gitignore  BlockChain.cpp  BlockChain.h  CMakeLists.txt  Factory.cpp  Loaders.h  MatamStory.cpp  MatamStory.h  Person.cpp  SortedList.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  enigma.py  introduction.txt  log.txt  main.cpp
.github/workflows/: stage.yml
Behaviours/: Behaviour.h  RiskTaking.h
Events/: EncounterEvent.cpp  EncounterEvent.h  Event.h  SpecialEvent.cpp  SpecialEvent.h
Players/: Archer.cpp  Archer.h  Loaders.h  Magician.cpp  Magician.h  Player.cpp  Player.h  Responsible.cpp  RiskTaking.cpp  RiskTaking.h  Strategy.h  Warior.cpp  Warrior.h
cmake/: core.cmake  utils.cmake
docker/: Valgrind.dockerfile
dry/: CMakeLists.txt  Pirate.cpp  Pirate.h  log.txt  main.cpp
impl/: Factory.cpp
impl/Events/: EncounterEvent.cpp  SpecialEvent.cpp
impl/Players/: Archer.cpp  Magician.cpp  Player.cpp  Warior.cpp
impl/Strategy/: Responsible.cpp  RiskTaking.cpp  Strategy.cpp
include/: Factory.h  Loaders.h
include/Events/: EncounterEvent.h  Event.h  SpecialEvent.h
include/Players/: Archer.h  Magician.h  Player.h  Warrior.h
include/Strategy/: Responsibile.cpp  Responsibile.h  Responsible.h  RiskTaking.cpp  RiskTaking.h  Strategy.h
src/: CMakeLists.txt  Person.cpp  Person.h  SortedList.h  TaskManager.cpp  TaskManager.h
src/hw1/: BlockChain.cpp  BlockChain.h  CMakeLists.txt  README.md  Transaction.cpp  main.cpp
src/hw1/files/: BlockChain.cpp  BlockChain.h  Transaction.cpp  main.cpp
tests/: CMakeLists.txt  conftest.py  engine.py  settings.json  setup.py  test1.events  valgrind.py
tests/cmake/: utils.cmake
tests/engine/: main.py  runner.py  runner2.py  settings.json  testcase.py  utils.py
tests/hw1-unit-tests/: CMakeLists.txt
tests/hw1/generators/: compress.py
tests/unit-tests/: CMakeLists.txt  matrix_tests.cpp  utils.cpp  utils.h
tests/unit-tests/MataMvidia/: matamvidia_constructor_tests.cpp  matamvidia_operators_tests.cpp
tests/unit-tests/cmake/: utils.cmake
tests/unit-tests/matrix/: MatrixTestBase.cpp  MatrixTestBase.h  matrix_constructor_tests.cpp  matrix_index_operator_tests.cpp  matrix_methods_tests.cpp  matrix_operators_tests.cpp
wet/: CMakeLists.txt  MataMvidia.cpp  MataMvidia.h  Matrix.cpp  Matrix.h  more_tests.cpp  run_test.cpp  tests.cpp
